<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    android:padding="20dp">

    <androidx.core.widget.NestedScrollView
        android:id="@+id/fragment_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <RelativeLayout
                android:id="@+id/custom_toolbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/img_logo"
                    android:layout_width="90dp"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:src="@drawable/ic_w3dart_logo" />

                <TextView
                    android:id="@+id/tv_sdk_version"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentEnd="true"
                    android:text="@string/sdk_version"
                    android:textSize="@dimen/_10ssp" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp">

                <TextView
                    style="@style/titleTextStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_centerVertical="true"
                    android:layout_toStartOf="@+id/btn_report_bug"
                    android:text="@string/report_your_bug" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn_report_bug"
                    style="@style/ButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:paddingStart="25dp"
                    android:paddingEnd="25dp"
                    android:text="@string/sdk_submit"
                    android:textAllCaps="false"
                    android:textSize="@dimen/_12ssp" />

            </RelativeLayout>


            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginTop="30dp"
                android:background="@color/gray" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/imgScreenShot"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:src="@drawable/bg_place_holder" />

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@color/gray" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/sdk_title"
                android:textColor="@color/dark_gray_text" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/et_title"
                style="@style/textInputEditText"
                android:layout_width="match_parent"
                android:layout_marginTop="5dp"
                android:background="@drawable/sdk_bg_input_box"
                android:inputType="text"
                android:lines="1"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:textColor="@color/colorPrimary" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/sdk_description"
                android:textColor="@color/dark_gray_text" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/et_description"
                style="@style/textInputEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:background="@drawable/sdk_bg_input_box"
                android:gravity="top"
                android:inputType="textMultiLine"
                android:lines="6"
                android:nestedScrollingEnabled="true"
                android:overScrollMode="always"
                android:paddingStart="16dp"
                android:paddingTop="16dp"
                android:paddingEnd="16dp"
                android:paddingBottom="16dp"
                android:scrollbarStyle="insideInset"
                android:scrollbars="vertical"
                android:textColor="@color/colorPrimary" />

            <TextView
                style="@style/titleTextStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:text="@string/sdk_captured_parameter" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rcv_parameters"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:orientation="vertical"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                tools:listitem="@layout/item_parameter" />

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</LinearLayout><!--<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/design_default_color_error">

    <TextView
        android:id="@+id/txtName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/imgProfile"
        android:layout_alignTop="@+id/imgProfile"
        android:layout_alignBottom="@+id/imgProfile"
        android:layout_toStartOf="@+id/imgProfile"
        android:gravity="center"
        android:shadowColor="#A51010"
        android:singleLine="false"
        android:text="Floating demo"
        android:textColor="#FFFFFF"
        android:textSize="22sp" />

    <ImageView
        android:id="@+id/imgProfile"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_alignParentRight="true"
        android:src="@drawable/ic_launcher" />

</RelativeLayout>-->

    <!--
    <androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/fingerprint_dialog_error"
        android:fitsSystemWindows="true">

        &lt;!&ndash;<com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            android:theme="@style/AppTheme.AppBarOverlay">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar_activity_main"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="?attr/colorPrimary" />
            app:popupTheme="@style/AppTheme.PopupOverlay" />
        </com.google.android.material.appbar.AppBarLayout>&ndash;&gt;

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|center_horizontal"
            android:layout_margin="16dp"
            android:gravity="center"
            android:text="Draw over apps demo"
            android:textSize="100dp" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab_activity_main"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_margin="16dp"
            android:visibility="gone"
            android:src="@android:drawable/ic_media_play" />

    </androidx.coordinatorlayout.widget.CoordinatorLayout>-->
